--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -12,6 +12,38 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="https://recipes.krsik.com/">Recipes</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="https://recipes.krsik.com/">Home</a>
+				</li>
+
+				{if $user->isLoggedIn()}
+					<li class="nav-item"><a n:href="Dashboard:default" class="nav-link">Admin dashboard</a></li>
+					<li class="nav-item"><a n:href="Sign:out" class="nav-link">Sign out</a></li>
+				{else}
+
+					<li class="nav-item">	<a href="{link Sign:in}" class="nav-link">Log in</a>
+					</li>
+					<li class="nav-item">
+						<a href="{link Sign:up}" class="nav-link">Sign up</a>
+					</li>
+				{/if}
+
+
+
+				
+			</ul>
+		</div>
+	</div>
+</nav>
+
 	<div class=container>
 		{* Flash messages display block *}
 		<div n:foreach="$flashes as $flash" n:class="alert, 'alert-' . $flash->type">{$flash->message}</div>
