--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-
+	<meta name="robots" content="noindex, nofollow">
 	{* Page title with optional prefix from the child template *}
 	<title>{ifset title}{include title|stripHtml} | {/ifset}User Login Example</title>
 
@@ -28,17 +28,17 @@
 					<li class="nav-item"><a n:href="Dashboard:default" class="nav-link">Admin dashboard</a></li>
 					<li class="nav-item"><a n:href="Sign:out" class="nav-link">Sign out</a></li>
 				{else}
-
-					<li class="nav-item">	<a href="{link Sign:in}" class="nav-link">Log in</a>
+					<li class="nav-item"><a href="./login" class="nav-link">Log in</a>
+						{* původní link bez routeru <a href="{link Sign:in}" class="nav-link">Log in</a> *}
 					</li>
 					<li class="nav-item">
-						<a href="{link Sign:up}" class="nav-link">Sign up</a>
+						<a href="/registration" class="nav-link">Sign up</a>
 					</li>
 				{/if}
 
 
 
-				
+
 			</ul>
 		</div>
 	</div>
@@ -55,6 +55,8 @@
 	{* Optional scripts block; by default includes Nette Forms script for validation *}
 	{block scripts}
 	<script src="https://unpkg.com/nette-forms@3/src/assets/netteForms.js"></script>
-	{/block}
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+{/block}
 </body>
 </html>
