Vytvořen PostPresenter pro zobrazení prispevku z DB vcetne vypisu do Post/show.latte z tutoriálu. Test ok

--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="noindex, nofollow">
 	{* Page title with optional prefix from the child template *}
 	<title>{ifset title}{include title|stripHtml} | {/ifset}User Login Example</title>
