--- a/app/Module/Admin/Presenters/templates/Homepage/default.latte
+++ b/app/Module/Admin/Presenters/templates/Homepage/default.latte
@@ -3,4 +3,21 @@
 
 <p>To je nová homepage od kočky</p>
 
+{* Cylus čtení z databáze a výpisu *}
+<div n:foreach="$posts as $post" class="post">
+    <div class="date">{$post->created_at|date:'F j, Y'}</div>
+    <h2><a href="{link Post:show $post->id}">{$post->title}</a></h2>
+    <div>{$post->content|truncate:256}</div>
+</div>
 
+{* Verze bez n:atrbutů
+
+{foreach $posts as $post}
+ <div class="post">
+     <div class="date">{$post->created_at|date:'F j, Y'}</div>
+     <h2>{$post->title}</h2>
+     <div>{$post->content|truncate:256}</div>
+ </div>
+{/foreach}
+
+*}
