Vytvareni a editace prispevku z tutorialu. Test ok.

--- a/app/Module/Admin/Presenters/templates/Homepage/default.latte
+++ b/app/Module/Admin/Presenters/templates/Homepage/default.latte
@@ -1,6 +1,6 @@
 {block content}
 <h1>Homepage default.latte</h1>
-
+<a n:href="Dashboard:create">Napsat nový příspěvek</a>
 <p>To je nová homepage od kočky</p>
 
 {* Cylus čtení z databáze a výpisu *}
