--- a/app/Module/Admin/Presenters/templates/Post/show.latte
+++ b/app/Module/Admin/Presenters/templates/Post/show.latte
@@ -8,6 +8,8 @@
 
 <div class="post">{$post->content}</div>
 
+<a n:href="Dashboard:edit $post->id">Upravit příspěvek</a>
+
 <h2>Comments</h2>
 {* Pokud je již formulář definován v presenteru, můžeme ho vykreslit (zobrazit) v šabloně.
    To uděláme umístěním značky {control} na konec šablony, která vykresluje jeden konkrétní příspěvek, do Post/show.latte.
@@ -19,6 +21,8 @@
    Pokud k atributu připojíte předponu tag-, funkcionalita se aplikuje pouze na HTML tag, ne na jeho obsah.
    Toto nám umožňuje udělat ze jména komentátora odkaz pouze v případě, že poskytl svůj e-mail.
 *}
+
+
 {foreach $comments as $comment}
     <p><b><a href="mailto:{$comment->email}" n:tag-if="$comment->email">
                 {$comment->name}
