--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -14,18 +14,18 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="https://recipes.krsik.com/">Recipes</a>
+		<a class="navbar-brand" n:href="Homepage:default">Recipes</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="https://recipes.krsik.com/">Home</a>
+					<a class="nav-link active" aria-current="page" n:href="Homepage:default">Home</a>
 				</li>
 
 				{if $user->isLoggedIn()}
-					<li class="nav-item"><a n:href="Dashboard:default" class="nav-link">Admin dashboard</a></li>
+					<li class="nav-itegit m"><a n:href="Dashboard:default" class="nav-link">Admin dashboard</a></li>
 					<li class="nav-item"><a n:href="Sign:out" class="nav-link">Sign out</a></li>
 				{else}
 					<li class="nav-item"><a href="./login" class="nav-link">Log in</a>
