--- a/app/Module/Admin/Presenters/templates/Homepage/default.latte
+++ b/app/Module/Admin/Presenters/templates/Homepage/default.latte
@@ -7,6 +7,7 @@
 <div n:foreach="$posts as $post" class="post">
     <div class="date">{$post->created_at|date:'F j, Y'}</div>
     <h2><a href="{link Post:show $post->id}">{$post->title}</a></h2>
+    <img src="{$post->image_path}" height="200">
     <p>{$post->content|truncate:256}</p>
 </div>
 
