--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="noindex, nofollow">
 	{* Page title with optional prefix from the child template *}
-	<title>{ifset title}{include title|stripHtml} | {/ifset}User Login Example</title>
+	<title>{ifset title}{include title|stripHtml} | {/ifset}Recipes database</title>
 
 	{* Link to the Bootstrap stylesheet for styling *}
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
