--- a/app/Module/Admin/Presenters/templates/Dashboard/create.latte
+++ b/app/Module/Admin/Presenters/templates/Dashboard/create.latte
@@ -1,8 +1,10 @@
 {block content}
-<h1>New Post</h1>
+<h1>Add a Recipe</h1>
 
 
-{control postForm}
+
+{include "../@form.latte", name: postForm}
+
 
 {* toto funguje i s povinnym souborem
 <form n:name=postForm class=form>
@@ -23,17 +25,9 @@
 *}
 <h2>Image preview</h2>
 <img id="image-preview" src="{$basePath}/img/stonozka-low-intensity-700w.webp" height="300" alt="Image preview" />
+{/block}
 {block scripts}
-    <script type="text/javascript">
-        // Form file upload required
-        document.getElementById("frm-postForm-image").required = true;
-        // Preview an image before it is uploaded
-        document.getElementById('frm-postForm-image').onchange = evt => {
-            const [file] = evt.target.files;
-            if (file) {
-                document.getElementById('image-preview').src = URL.createObjectURL(file);
-            }
-        };
-    </script>
+    {include parent}
+    <script src="{$basePath}/assets/js/create-latte.js"></script>
 
 {/block}
