--- a/app/Module/Admin/Presenters/templates/Dashboard/edit.latte
+++ b/app/Module/Admin/Presenters/templates/Dashboard/edit.latte
@@ -1,11 +1,12 @@
 {block content}
 <h1>Upravit příspěvek</h1>
 
-{control postForm}
+    {include "../@form.latte", name: postForm}
 <h2>Image preview</h2>
 <img id="image-preview" src="https://placehold.co/300x300?text=You can change the image." height="300" alt="Image preview" />
 {/block}
 {block scripts}
+{include parent}
 <script type="text/javascript">
 
     // Preview an image before it is uploaded
