Vylepsen vypis receptu na hl. strane i detail receptu.

--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -1,1 +1,25 @@
 /*custom styles*/
+
+@media only screen and (min-width: 40em) {
+    .recipe-detail-container{
+        max-width: 50rem;
+    }
+/* Recipe listing
+/* Kupa livancu - Navrhovy vzor, grid uvnitr flexboxu. box-container je definovan v html d-flex flex-wrap */
+.box-container{
+}
+.box{
+    max-width: 18rem;
+    margin: 0 1rem 1rem 0;
+    display:grid ;
+    grid-template-rows: auto 18rem auto;
+}
+.box-body{
+    padding: 1rem;
+    overflow: hidden;
+}
+.box-foot{
+    padding: 1rem;
+}
+}
+/* ******* end kupa livancu
