--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -84,7 +84,7 @@
 <!------------------------------ emd color mode button ------------------------------------------->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<div class="container-fluid">
+	<div class="container">
 		<a class="navbar-brand" n:href="Homepage:default">Recipes</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -96,8 +96,10 @@
 				</li>
 
 				{if $user->isLoggedIn()}
-					<li class="nav-itegit m"><a n:href="Dashboard:default" class="nav-link">Admin dashboard</a></li>
+					<li class="nav-item text-success"><a n:href="Dashboard:default" class="nav-link text-info disabled">Welcome, {$user->getIdentity()->username}!</a></li>
+					<li class="nav-item"><a n:href="Dashboard:default" class="nav-link">Admin dashboard</a></li>
 					<li class="nav-item"><a n:href="Sign:out" class="nav-link">Sign out</a></li>
+
 				{else}
 					<li class="nav-item"><a href="./login" class="nav-link">Log in</a>
 						{* původní link bez routeru <a href="{link Sign:in}" class="nav-link">Log in</a> *}
@@ -105,6 +107,7 @@
 					<li class="nav-item">
 						<a href="/registration" class="nav-link">Sign up</a>
 					</li>
+
 				{/if}
 
 
