--- a/app/Module/Admin/Presenters/templates/Dashboard/create.latte
+++ b/app/Module/Admin/Presenters/templates/Dashboard/create.latte
@@ -23,11 +23,18 @@
 </form>
 {/block}
 *}
-<h2>Image preview</h2>
-<img id="image-preview" src="{$basePath}/img/stonozka-low-intensity-700w.webp" height="300" alt="Image preview" />
+    <h2>Image preview</h2>
+    <img id="image-preview" src="https://placehold.co/300x300?text=You can change the image." height="300" alt="Image preview" />
 {/block}
 {block scripts}
-    {include parent}
-    <script src="{$basePath}/assets/js/create-latte.js"></script>
+{include parent}
+<script type="text/javascript">
 
-{/block}
+    // Preview an image before it is uploaded
+    document.getElementById('frm-postForm-image').onchange = evt => {
+        const [file] = evt.target.files;
+        if (file) {
+            document.getElementById('image-preview').src = URL.createObjectURL(file);
+        }
+    };
+</script>
