Velky rollback + upgrade. Fungují kategorie a jejich vypis z promenny v @layout.latte. Kazdy presenter ma beforeRender kvuli promenne . Neni nastaven cely router + kontrola unikatniho URL (porovnat seotitle s db)

--- a/app/Module/Admin/Presenters/templates/Post/show.latte
+++ b/app/Module/Admin/Presenters/templates/Post/show.latte
@@ -1,8 +1,8 @@
 {block content}
 
-<p><a n:href="Homepage:default">← zpět na hlavní stránku</a></p>
+<p><a n:href="Homepage:default">← zpět na výpis příspěvků</a></p>
 
-<div class="recipe-detail-container">
+<div class="recipe-detail-container w-50">
 
 <h1 n:block="title">{$post->title}</h1>
 <p> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
