--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -85,15 +85,24 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<div class="container">
-		<a class="navbar-brand" n:href="Homepage:default">Recipes</a>
+		<a class="navbar-brand" n:href="Homepage:default">Recipes home</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" n:href="Homepage:default">Home</a>
+
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Meals</a>
+					<ul class="dropdown-menu">
+
+                                                <li n:foreach="$categories as $cat">
+                                                    <a class="dropdown-item" n:href="Category:show $cat->category_seotitle">{$cat->category_title}</a>
+                                                </li>
+
+					</ul>
 				</li>
+
 
 				{if $user->isLoggedIn()}
 					<li class="nav-item text-success"><a n:href="Dashboard:default" class="nav-link text-info disabled">Welcome, {$user->getIdentity()->username}!</a></li>
