--- a/app/Module/Admin/Presenters/templates/Homepage/default.latte
+++ b/app/Module/Admin/Presenters/templates/Homepage/default.latte
@@ -2,6 +2,7 @@
 <h1>Homepage default.latte</h1>
 <a n:href="Dashboard:create">Napsat nový příspěvek</a>
 <p>To je nová homepage od kočky</p>
+
 <div class="box-container d-flex flex-wrap border border-primary">
     {* Cylus čtení z databáze a výpisu *}
     <div n:foreach="$posts as $post" class="box border border-warning">
@@ -9,10 +10,10 @@
 
             <header class="box-head"> <img src="{$post->image_path}" width="100%" class="object-fit-contain"></header>
             <main class="box-body">
-                <h2 class="fs-5 mt-2"><a href="{$post->id}-{$post->seotitle}" class="link-underline link-underline-opacity-0">{$post->title}</a></h2>
+                <h2 class="fs-5 mt-2"><a href="{link Post:show $post->id}" class="link-underline link-underline-opacity-0">{$post->title}</a></h2>
                 <p>
 
-                    {$post->instructions|truncate:256}</p>
+                    {$post->content|truncate:256}</p>
             </main>
             <footer class="box-foot">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
