Pridany subkategorie. V DB pridan slupec subcategory_seotittle2 a nyni se zaznamy nacitaji ve vice subkategoriich. Upravena metoda getPublicArticlesBySubcategory v PostFacade. Casem pridame vice subkategirii, a jejich správu ve formulari

--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -110,7 +110,7 @@
 					<li class="nav-item"><a n:href="Sign:out" class="nav-link">Sign out</a></li>
 
 				{else}
-					<li class="nav-item"><a href="./login" class="nav-link">Log in</a>
+					<li class="nav-item"><a n:href="Sign:in" class="nav-link">Log in</a>
 						{* původní link bez routeru <a href="{link Sign:in}" class="nav-link">Log in</a> *}
 					</li>
 					<li class="nav-item">
