--- a/app/Module/Admin/Presenters/templates/Post/show.latte
+++ b/app/Module/Admin/Presenters/templates/Post/show.latte
@@ -1,57 +1,85 @@
 {block content}
 
-<p><a n:href="Homepage:default">← zpět na výpis příspěvků</a></p>
 
-<div class="recipe-detail-container w-50">
-
-<h1 n:block="title">{$post->title}</h1>
-<p> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-         class="bi bi-clock" viewBox="0 0 16 16">
-        <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
-        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
-    </svg>
-    30 min &nbsp;
-
-
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-        <path fill="currentColor" d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-    </svg>
-    {$randomNumber = rand(1, 300)} &nbsp;   {$post->created_at|date:'F j, Y'} <!-- Vytvoření proměnné s náhodným číslem --></p>
-<p>{$post->content}</p>
-<img src="{$post->image_path}" width="100%" class="object-fit-contain">
-<div class="row p-1">
-  <div class="col"> <span class="fw-bold">Prep Time</span> {$post->prep_time} mins </div>
-    <div class="col"><span class="fw-bold">Cook Time</span> {$post->cook_time} mins</div>
-    <div class="col"><span class="fw-bold">Servings </span> {$post->servings}</div>
-</div>
-<h2>Ingrediens</h2>
-<p>{$post->ingrediens}</p>
-<h2>Directions</h2>
-<p>{$post->instructions}</p>
-<h2>Nutrition Facts</h2>
-<p>{$post->nutrition_facts}</p>
-
-<a n:href="Dashboard:edit $post->id">Upravit příspěvek</a>
-
-<h2>Comments</h2>
-{* Pokud je již formulář definován v presenteru, můžeme ho vykreslit (zobrazit) v šabloně.
-   To uděláme umístěním značky {control} na konec šablony, která vykresluje jeden konkrétní příspěvek, do Post/show.latte.
-   Protože se komponenta jmenuje commentForm (název je odvozen od názvu metody createComponentCommentForm), značka bude vypadat takto:
-*}
-{*{control commentForm}*}
-{include "../@form.latte", name: commentForm}
-{* Všimněte si speciálního atributu n:tag-if. Již víte jak n:atributy fungují.
-   Pokud k atributu připojíte předponu tag-, funkcionalita se aplikuje pouze na HTML tag, ne na jeho obsah.
-   Toto nám umožňuje udělat ze jména komentátora odkaz pouze v případě, že poskytl svůj e-mail.
-*}
+<div class="recipe-detail-container">
+<div class="row">
+    <div class="col-lg-6">
+    <h1 class="pt-2" n:block="title">{$post->title}</h1>
+    <p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-clock" viewBox="0 0 16 16">
+            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+        </svg>
+        30 min &nbsp;
 
 
-{foreach $comments as $comment}
-    <p><b><a href="mailto:{$comment->email}" n:tag-if="$comment->email">
-                {$comment->name}
-            </a></b> napsal:</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
+             viewBox="0 0 16 16">
+            <path fill="currentColor"
+                  d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+        </svg>
+        {$randomNumber = rand(1, 300)} &nbsp; {$post->created_at|date:'F j, Y'}
+        <!-- Vytvoření proměnné s náhodným číslem -->
+        {if $user->isLoggedIn()}
+            <a n:href="Dashboard:edit $post->id"> (Edit post)</a>
+        {/if}
+    </p>
+    <p>{$post->content}</p>
+    <img src="{$post->image_path}" width="100%" class="object-fit-contain">
+    <div class="row p-1">
+        <div class="col text-center"><span class="fw-bold">Prep Time:</span> <p>{$post->prep_time} mins</p></div>
+        <div class="col text-center"><span class="fw-bold">Cook Time:</span> <p>{$post->cook_time} mins</p></div>
+        <div class="col text-center"><span class="fw-bold">Servings: </span> <p>{$post->servings}</p></div>
+    </div>
+    <h2>Ingrediens</h2>
+    <ul class="list-group">
+        {foreach explode("\n", $post->ingredients) as $ingredient}
+            <li class="list-group-item border border-0">{$ingredient}</li>
+        {/foreach}
+    </ul>
+    <h2>Directions</h2>
+    <ol class="list-group ">
+        {var $step = 1} <!-- Počáteční hodnota počítadla kroků -->
+        {foreach explode("\n", $post->instructions) as $instruction}
 
-    <div>{$comment->content}</div>
-{/foreach}
+            <li class="list-group-item border border-0">
+                <span class="list-group-item-addon fw-bold step">Step {$step}</span>
+                <span class="list-group-item-text"><p>{$instruction}</p></span>
 
+            </li>
+            {var $step=$step+1} <!-- Zvýšení počítadla kroků po každé iteraci -->
+        {/foreach}
+    </ol>
+
+    <h2>Nutrition Facts</h2>
+    <div class="row">
+        {foreach explode("\n", $post->nutrition_facts) as $nutrition_fact}
+            <div class="col text-center">{$nutrition_fact}</div>
+        {/foreach}
+    </div>
+
+
+    <h2 class="pt-5">Questions & Replies</h2>
+    {* Pokud je již formulář definován v presenteru, můžeme ho vykreslit (zobrazit) v šabloně.
+       To uděláme umístěním značky {control} na konec šablony, která vykresluje jeden konkrétní příspěvek, do Post/show.latte.
+       Protože se komponenta jmenuje commentForm (název je odvozen od názvu metody createComponentCommentForm), značka bude vypadat takto:
+    *}
+    {*{control commentForm}*}
+    {include "../@form.latte", name: commentForm}
+    {* Všimněte si speciálního atributu n:tag-if. Již víte jak n:atributy fungují.
+       Pokud k atributu připojíte předponu tag-, funkcionalita se aplikuje pouze na HTML tag, ne na jeho obsah.
+       Toto nám umožňuje udělat ze jména komentátora odkaz pouze v případě, že poskytl svůj e-mail.
+    *}
+
+
+    {foreach $comments as $comment}
+        <p><b><a href="mailto:{$comment->email}" n:tag-if="$comment->email">
+                    {$comment->name}
+                </a></b>:</p>
+
+        <div>{$comment->content}</div>
+    {/foreach}
+    </div> {* end col *}
+ </div> {* end row *}
 </div>
