--- a/app/Module/Admin/Presenters/templates/Category/show.latte
+++ b/app/Module/Admin/Presenters/templates/Category/show.latte
@@ -1,20 +1,19 @@
 {block content}
-
-
 {* Ta podminka by tu nemela byt, ale DashboardPresenter nezna ty promenny a hazi chyby. Chci to resit beforeRender
 {ifset $category}*}
-
-<h1 n:block="category_title">{$category->category_title}</h1>
-
-<div class="post">{$category->description}</div>
-
 <p>
 <ul class="list-group list-group-horizontal">
-<li class="list-group-item border border-0" n:foreach="$subcategories as $cat">
-    <a class="text-uppercase fw-bold link-underline link-underline-opacity-0" n:href="Category:subcategory $cat->subcategory_seotitle" >{$cat->subcategory_title}</a>
-</li>
+    <li class="list-group-item border border-0" n:foreach="$subcategories as $cat">
+        <a n:href="Category:subcategory, 'category_seotitle' => $category->category_seotitle, 'subcategory_seotitle' => $cat->subcategory_seotitle">{$cat->subcategory_title}</a>
+
+    </li>
 </ul>
 </p>
+<h1 n:block="category_title">{$category->category_title}</h1>
+
+<p>{$category->description}</p>
+
+
 
 <div class="box-container d-flex flex-wrap border border-primary">
     {* Cyklus čtení z databáze a výpisu *}
