--- a/app/Module/Admin/Presenters/templates/@layout.latte
+++ b/app/Module/Admin/Presenters/templates/@layout.latte
@@ -4,22 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="noindex, nofollow">
-	<meta name="description" content="{if $context === 'category' && isset($category->description)}{$category->description}{elseif $context === 'subcategory' && isset($subcategory->description)}{$subcategory->description}{elseif $context === 'post' && isset($post->title)}{$post->title}{/if}"/>
-	{* Page title with optional prefix from the child template *}
-	<title>
-			{if $context === 'category' && isset($category->category_title)}
-			{$category->category_title|stripHtml} |
-			{elseif $context === 'subcategory' && isset($subcategory->subcategory_title)}
-			{$subcategory->subcategory_title|stripHtml} |
-			{elseif $context === 'post' && isset($post->title)}
-			{$post->title|stripHtml} |
-			{/if}Recipes Database
-	</title>
+	<meta name="description" content="{if $context === 'category' && isset($category->description)}{$category->description|stripHtml}{elseif $context === 'subcategory' && isset($subcategory->description)}{$subcategory->description|stripHtml}{elseif $context === 'post' && isset($post->meta_description)}{$post->meta_description|stripHtml}{/if}"/>
+	{* Podminky pro zobrazeni dynamickych titulku. Pomohl Chatgpt*}
+	<title>{if $context === 'category' && isset($category->category_title)}{$category->category_title|stripHtml} Recipes{elseif $context === 'subcategory' && isset($subcategory->subcategory_title)}{$subcategory->subcategory_title|stripHtml} Recipes{elseif $context === 'post' && isset($post->title)}{$post->title|stripHtml} | Recipe {else} Online Recipes{/if}</title>
 
-	{* Link to the Bootstrap stylesheet for styling *}
+
 	<link rel="stylesheet" href="{$basePath}/assets/css/styles.css">
 	<link rel="stylesheet" href="{$basePath}/assets/css/color-modes.css">
-	<link rel="stylesheet" href="{$basePath}/assets/bootstrap-5.3.2-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="{$basePath}/assets/bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
 <body>
 <!------------------------------ color mode button ------------------------------------------->
@@ -90,8 +82,8 @@
 		</li>
 	</ul>
 </div>
-<!------------------------------ emd color mode button ------------------------------------------->
-
+<!------------------------------ end color mode button ------------------------------------------->
+<header data-bs-theme="dark">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<div class="container">
 		<a class="navbar-brand" n:href="Homepage:default">Recipes home</a>
@@ -135,7 +127,8 @@
 		</div>
 	</div>
 </nav>
-
+</header>
+<main>
 	<div class=container>
 		{* Flash messages display block *}
 		<div n:foreach="$flashes as $flash" n:class="alert, 'alert-' . $flash->type">{$flash->message}</div>
@@ -146,8 +139,18 @@
 
 	{* Optional scripts block; by default includes Nette Forms script for validation *}
 	{block scripts}
+</main>
+<footer class="text-body-secondary py-5">
+	<div class="container">
+		<p class="float-end mb-1">
+			<a href="#">Back to top</a>
+		</p>
+		<p class="mb-1">Coock Book &copy; Mallcom, but please download and customize it for yourself!</p>
+
+	</div>
+</footer>
 	<script src="https://unpkg.com/nette-forms@3/src/assets/netteForms.js"></script>
-	<script src="{$basePath}/assets/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+	<script src="{$basePath}/assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 	<script src="{$basePath}/assets/js/color-modes.js"></script>
 {/block}
 </body>
