--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -2,20 +2,17 @@
 .box-container{
 
 }
-/* původne:  grid-template-rows: auto 20rem auto; = upraveno pro menší obsah  */
+
 .box{
-    max-width: 15rem;
-    margin: 0 1rem 1rem 0;
-    display:grid ;
-    grid-template-rows: auto 10rem auto;
+
 }
 .box-head{
 
 }
 .box-body{
     padding: 1rem;
-    overflow: hidden;
+
 }
 .box-foot{
-    padding: 1rem;
+    padding: 0rem 1rem 0 1rem;
 }
