--- a/app/Module/Admin/Presenters/templates/Category/show.latte
+++ b/app/Module/Admin/Presenters/templates/Category/show.latte
@@ -27,7 +27,9 @@ D
                     <div class="ps-0 ms-0 pb-0 mb-0 pt-1 fs-6">
 
 
-                        <span class="text-end ms-3">{$post->subcategory_seotitle}</span>
+                        <span class="text-end ms-3">
+                             {!isset($subcategoryTitles[$post->subcategory_seotitle]) ? 'No Subcategory' : $subcategoryTitles[$post->subcategory_seotitle]}
+                        </span>
                     </div>
                 </header>
                 <main class="box-body   border-secondary">
